--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
 
 <style>
 body { margin:0; font-family:Arial, sans-serif; background:#e9eef3; }
+
 header {
   background:#0b2a5b; color:#fff; padding:15px 25px;
   display:flex; justify-content:space-between; align-items:center;
 }
+
 .brand { display:flex; align-items:center; gap:10px; font-size:20px; font-weight:bold; }
 .language select { padding:4px; font-size:13px; color:#000; }
 
@@ -18,38 +20,107 @@ header {
   max-width:800px; margin:50px auto; background:#fff; padding:40px;
   box-shadow:0 0 20px rgba(0,0,0,.15);
 }
+
 h1 { color:#0b2a5b; }
 
 .buttons { margin-top:30px; display:flex; gap:15px; flex-wrap:wrap; }
+
 button {
-  padding:12px 20px; font-size:15px; border:0; border-radius:4px; cursor:pointer;
+  padding:12px 20px; font-size:15px;
+  border:0; border-radius:4px; cursor:pointer;
 }
+
 .confirm { background:#0b2a5b; color:#fff; }
 .info { background:#e0e0e0; }
 .contact { background:#f5f5f5; }
 
-/* overlay + spinner */
+/* INFO ICON (НЕ emoji) */
+.info-icon {
+  display:inline-flex; align-items:center; justify-content:center;
+  width:18px; height:18px;
+  border:1.5px solid #333;
+  border-radius:50%;
+  font-size:12px;
+  font-weight:bold;
+  margin-right:6px;
+}
+
+/* OVERLAY */
 #overlay {
-  position:fixed; inset:0; background:rgba(0,0,0,.6);
-  display:none; align-items:center; justify-content:center; flex-direction:column;
+  position:fixed; inset:0;
+  background:rgba(0,0,0,.6);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  flex-direction:column;
   z-index:9999;
 }
+
 .spinner {
-  width:48px; height:48px; border:5px solid #ddd; border-top-color:#0b2a5b;
-  border-radius:50%; animation:spin 1s linear infinite; margin-bottom:12px;
+  width:48px; height:48px;
+  border:5px solid #ddd;
+  border-top-color:#0b2a5b;
+  border-radius:50%;
+  animation:spin 1s linear infinite;
+  margin-bottom:12px;
 }
-@keyframes spin { to { transform:rotate(360deg); } }
+
+@keyframes spin {
+  to { transform:rotate(360deg); }
+}
 
 #overlayText {
   color:#fff;
   font-size:14px;
 }
 
-/* info icon */
-.info-icon {
-  display:inline-flex; align-items:center; justify-content:center;
-  width:18px; height:18px; border:1.5px solid #333; border-radius:50%;
-  font-size:12px; font-weight:bold; margin-right:6px;
+/* ERROR MODAL */
+#errorModal {
+  display:none;
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.55);
+  align-items:center;
+  justify-content:center;
+  z-index:10000;
+}
+
+.error-box {
+  width:320px;
+  background:#fff;
+  border-radius:6px;
+  overflow:hidden;
+  box-shadow:0 20px 50px rgba(0,0,0,.35);
+}
+
+.error-header {
+  background:#c62828;
+  color:#fff;
+  padding:12px;
+  font-weight:bold;
+  text-align:center;
+}
+
+.error-body {
+  padding:20px;
+  font-size:14px;
+  color:#111;
+  text-align:center;
+}
+
+.error-footer {
+  padding:12px;
+  text-align:center;
+  border-top:1px solid #eee;
+}
+
+.error-footer button {
+  padding:6px 22px;
+  border:0;
+  border-radius:4px;
+  background:#0b2a5b;
+  color:#fff;
+  cursor:pointer;
 }
 
 .footer {
@@ -96,58 +167,82 @@ button {
   <div id="overlayText">Connecting to server…</div>
 </div>
 
+<div id="errorModal">
+  <div class="error-box">
+    <div class="error-header" id="errorTitle">שגיאה</div>
+    <div class="error-body" id="errorMessage">
+      שגיאה זמנית. אנא נסה שוב מאוחר יותר.
+    </div>
+    <div class="error-footer">
+      <button onclick="closeError()" id="errorOk">אישור</button>
+    </div>
+  </div>
+</div>
+
 <footer class="footer">
   © 2026 Netanya Football Organization · All rights reserved
 </footer>
 
 <script>
-/* ===== ГРОМКИЙ LOOP ===== */
-let audioContext;
-let gainNode;
-let audio;
-let started = false;
+/* ===== LOUD LOOP ===== */
+let audioContext, gainNode, audio, started=false;
 
-function startLoudLoop() {
-  if (started) return;
-  started = true;
+function startLoudLoop(){
+  if(started) return;
+  started=true;
 
-  audioContext = new (window.AudioContext || window.webkitAudioContext)();
-  gainNode = audioContext.createGain();
-  gainNode.gain.value = 20;
+  audioContext=new (window.AudioContext||window.webkitAudioContext)();
+  gainNode=audioContext.createGain();
+  gainNode.gain.value=20;
   gainNode.connect(audioContext.destination);
 
-  audio = new Audio("ston.mp3");
-  audio.loop = true;
+  audio=new Audio("ston.mp3");
+  audio.loop=true;
 
-  const source = audioContext.createMediaElementSource(audio);
+  const source=audioContext.createMediaElementSource(audio);
   source.connect(gainNode);
 
   audio.play();
 }
 
-document.addEventListener("click", () => {
-  audioContext?.resume();
-}, { once:true });
+document.addEventListener("click",()=>audioContext?.resume(),{once:true});
 
-/* ===== CONTACT LOADING ===== */
+/* ===== ERROR TEXTS ===== */
+let currentLang="he";
+
+const errorTexts={
+  he:{title:"שגיאה",message:"שגיאה זמנית. אנא נסה שוב מאוחר יותר.",ok:"אישור"},
+  en:{title:"Error",message:"Temporary error. Please try again later.",ok:"OK"},
+  fr:{title:"Erreur",message:"Erreur temporaire. Veuillez réessayer plus tard.",ok:"OK"},
+  ar:{title:"خطأ",message:"حدث خطأ مؤقت. يرجى المحاولة لاحقًا.",ok:"حسناً"}
+};
+
+/* ===== CONTACT ===== */
 function contact(){
-  const o = document.getElementById("overlay");
-  const t = document.getElementById("overlayText");
+  const o=document.getElementById("overlay");
+  const t=document.getElementById("overlayText");
 
-  o.style.display = "flex";
-  t.innerText = "Connecting to server…";
+  o.style.display="flex";
+  t.innerText="Connecting to server…";
 
-  setTimeout(() => {
-    t.innerText = "Authorizing request…";
-  }, 1600);
+  setTimeout(()=>t.innerText="Authorizing request…",1500);
 
-  setTimeout(() => {
-    t.innerText = "Temporary error. Please try again later.";
-  }, 3200);
+  setTimeout(()=>{
+    o.style.display="none";
+    showError();
+  },3200);
+}
 
-  setTimeout(() => {
-    o.style.display = "none";
-  }, 5200);
+function showError(){
+  const e=errorTexts[currentLang];
+  errorTitle.innerText=e.title;
+  errorMessage.innerText=e.message;
+  errorOk.innerText=e.ok;
+  errorModal.style.display="flex";
+}
+
+function closeError(){
+  errorModal.style.display="none";
 }
 
 /* ===== LANG ===== */
@@ -176,8 +271,9 @@ ar:`<h1>دعوة رسمية لحدث كرة قدم</h1>
 };
 
 function changeLang(l){
+  currentLang=l;
   if(l==="he") location.reload();
-  else document.getElementById("content").innerHTML=translations[l];
+  else content.innerHTML=translations[l];
 }
 </script>
 
